--- a/page25.html
+++ b/page25.html
@@ -42,14 +42,14 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
             ABOUT</a><div class="dropdown-menu"><a class="dropdown-item text-secondary display-7" href="ourstudio.html">Our Studio</a><a class="dropdown-item text-secondary display-7" href="ourvalues.html">Our Values</a><a class="dropdown-item text-secondary display-7" href="faq.html">FAQ</a></div>
 
     </li>
-    <li class="nav-item dropdown">
-        <a class="nav-link link dropdown-toggle text-secondary display-7" data-toggle="dropdown-submenu" aria-expanded="false">
+    <li class="nav-item dropdown open">
+        <a class="nav-link link dropdown-toggle text-secondary display-7" data-toggle="dropdown-submenu" aria-expanded="true">
         SERVICES
     </a>
     <div class="dropdown-menu">
         <a class="dropdown-item text-secondary display-7" href="matwork.html">Matwork</a>
-        <a class="dropdown-item text-secondary display-7" href="barre.html">Barre+Boxilates</a><a class="dropdown-item text-secondary display-7" href="reformer.html">Reformer</a><a class="dropdown-item text-secondary display-7" href="pregnancy.html">Pregnancy+Post Natal</a><a class="dropdown-item text-secondary display-7" href="classlist.html">______________________</a><a class="dropdown-item text-secondary display-7" href="classlist.html">Class List</a>
-        <a class="dropdown-item text-secondary display-7" href="stafflist.html" aria-expanded="false">Staff List</a>
+        <a class="dropdown-item text-secondary display-7" href="barre.html">Barre+Boxilates</a><a class="dropdown-item text-secondary display-7" href="reformer.html">Reformer</a><a class="dropdown-item text-secondary display-7" href="pregnancy.html">Pregnancy+Post Natal</a>
+        
     </div>
 </li><li class="nav-item">
         <a class="nav-link link text-secondary display-7" href="locations.html">LOCATIONS</a>
@@ -133,14 +133,14 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
             ABOUT</a><div class="dropdown-menu"><a class="dropdown-item text-secondary display-7" href="ourstudio.html">Our Studio</a><a class="dropdown-item text-secondary display-7" href="ourvalues.html">Our Values</a><a class="dropdown-item text-secondary display-7" href="faq.html">FAQ</a></div>
 
     </li>
-    <li class="nav-item dropdown">
-        <a class="nav-link link dropdown-toggle text-secondary display-7" data-toggle="dropdown-submenu" aria-expanded="false">
+    <li class="nav-item dropdown open">
+        <a class="nav-link link dropdown-toggle text-secondary display-7" data-toggle="dropdown-submenu" aria-expanded="true">
         SERVICES
     </a>
     <div class="dropdown-menu">
         <a class="dropdown-item text-secondary display-7" href="matwork.html">Matwork</a>
-        <a class="dropdown-item text-secondary display-7" href="barre.html">Barre+Boxilates</a><a class="dropdown-item text-secondary display-7" href="reformer.html">Reformer</a><a class="dropdown-item text-secondary display-7" href="pregnancy.html">Pregnancy+Post Natal</a><a class="dropdown-item text-secondary display-7" href="classlist.html">______________________</a><a class="dropdown-item text-secondary display-7" href="classlist.html">Class List</a>
-        <a class="dropdown-item text-secondary display-7" href="stafflist.html" aria-expanded="false">Staff List</a>
+        <a class="dropdown-item text-secondary display-7" href="barre.html">Barre+Boxilates</a><a class="dropdown-item text-secondary display-7" href="reformer.html">Reformer</a><a class="dropdown-item text-secondary display-7" href="pregnancy.html">Pregnancy+Post Natal</a>
+        
     </div>
 </li><li class="nav-item">
         <a class="nav-link link text-secondary display-7" href="locations.html">LOCATIONS</a>
