--- a/aboutus.html
+++ b/aboutus.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/12278679-178671905814554-6409431870868768230-n-128x128.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/12278679-178671905814554-6409431870868768230-n-128x128-2.png" type="image/x-icon">
   <meta name="description" content="">
   
   <title>About</title>
@@ -45,13 +45,13 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
             ABOUT</a><div class="dropdown-menu"><a class="dropdown-item text-secondary display-7" href="ourstudio.html">Our Studio</a><a class="dropdown-item text-secondary display-7" href="ourvalues.html">Our Values</a><a class="dropdown-item text-secondary display-7" href="faq.html">FAQ</a></div>
 
     </li>
-    <li class="nav-item dropdown open">
+    <li class="nav-item dropdown">
         <a class="nav-link link dropdown-toggle text-secondary display-7" data-toggle="dropdown-submenu" aria-expanded="true">
         SERVICES
     </a>
     <div class="dropdown-menu">
         <a class="dropdown-item text-secondary display-7" href="matwork.html">Matwork</a>
-        <a class="dropdown-item text-secondary display-7" href="barre.html">Barre+Boxilates</a><a class="dropdown-item text-secondary display-7" href="reformer.html">Reformer</a><a class="dropdown-item text-secondary display-7" href="pregnancy.html">Pregnancy+Post Natal</a>
+        <a class="dropdown-item text-secondary display-7" href="barre.html">Barre+Boxilates</a><a class="dropdown-item text-secondary display-7" href="reformer.html">Reformer</a><a class="dropdown-item text-secondary display-7" href="pregnancy.html">Pregnancy+Post Natal</a><a class="dropdown-item text-secondary display-7" href="private.html">Private Sessions</a><a class="dropdown-item text-secondary display-7" href="creche.html">Creche</a>
         
     </div>
 </li><li class="nav-item">
@@ -136,13 +136,13 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
             ABOUT</a><div class="dropdown-menu"><a class="dropdown-item text-secondary display-7" href="ourstudio.html">Our Studio</a><a class="dropdown-item text-secondary display-7" href="ourvalues.html">Our Values</a><a class="dropdown-item text-secondary display-7" href="faq.html">FAQ</a></div>
 
     </li>
-    <li class="nav-item dropdown open">
+    <li class="nav-item dropdown">
         <a class="nav-link link dropdown-toggle text-secondary display-7" data-toggle="dropdown-submenu" aria-expanded="true">
         SERVICES
     </a>
     <div class="dropdown-menu">
         <a class="dropdown-item text-secondary display-7" href="matwork.html">Matwork</a>
-        <a class="dropdown-item text-secondary display-7" href="barre.html">Barre+Boxilates</a><a class="dropdown-item text-secondary display-7" href="reformer.html">Reformer</a><a class="dropdown-item text-secondary display-7" href="pregnancy.html">Pregnancy+Post Natal</a>
+        <a class="dropdown-item text-secondary display-7" href="barre.html">Barre+Boxilates</a><a class="dropdown-item text-secondary display-7" href="reformer.html">Reformer</a><a class="dropdown-item text-secondary display-7" href="pregnancy.html">Pregnancy+Post Natal</a><a class="dropdown-item text-secondary display-7" href="private.html">Private Sessions</a><a class="dropdown-item text-secondary display-7" href="creche.html">Creche</a>
         
     </div>
 </li><li class="nav-item">
